k8s/overlays/prod/second-step/patch-single-node-resources.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: queue-worker
spec:
  replicas: 0
  template:
    spec:
      containers:
        - name: queue
          resources:
            requests:
              cpu: "25m"
              memory: "64Mi"
            limits:
              cpu: "150m"
              memory: "128Mi"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client
spec:
  template:
    spec:
      containers:
        - name: client
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "200m"
              memory: "160Mi"
