k8s/overlays/prod/second-step/patch-ingress-host.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloudnotes-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    acme.cert-manager.io/http01-edit-in-place: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: mycloudnotes.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: server-nginx
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: client
                port:
                  number: 80
    - host: www.mycloudnotes.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: server-nginx
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: client
                port:
                  number: 80
  tls:
    - hosts:
        - mycloudnotes.com
        - www.mycloudnotes.com
      secretName: cloudnotes-tls-secret
